Update to Java 17.